Add data size parameter for cache content